--- a/config/overlays/odh/params.env
+++ b/config/overlays/odh/params.env
@@ -1,4 +1,5 @@
-kserve-controller=quay.io/opendatahub/kserve-controller:latest
-kserve-agent=quay.io/opendatahub/kserve-agent:latest
-kserve-router=quay.io/opendatahub/kserve-router:latest
-kserve-storage-initializer=quay.io/opendatahub/kserve-storage-initializer:latest
+kserve-controller=quay.io/opendatahub/kserve-controller:v0.11.1.7
+kserve-agent=quay.io/opendatahub/kserve-agent:v0.11.1.7
+kserve-router=quay.io/opendatahub/kserve-router:v0.11.1.7
+kserve-storage-initializer=quay.io/opendatahub/kserve-storage-initializer:v0.11.1.7
+
