--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -87,6 +87,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4   
+        with:
+          ref: ${{ github.ref }}
       - name: Build Changelog
         id: build_changelog
         uses: mikepenz/release-changelog-builder-action@v4
@@ -106,6 +108,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.ref }}
       - name: Generate Release Notes
         run: echo ${{ env.changelog }}
       - name: Create Release
