--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -19,7 +19,9 @@ jobs:
       old_tag: ${{ steps.get_tag.outputs.old_tag_name }}
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.ref }}
       
       - name: Get latest tag
         id: get_tag
@@ -113,7 +115,7 @@ jobs:
       - name: Generate Release Notes
         run: echo ${{ env.changelog }}
       - name: Create Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           token: ${{ github.token }}
           tag_name: ${{ github.event.inputs.tag_name }}
