--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -1,4 +1,4 @@
-name: Create Tag and Release changelog
+name: Create Tag and Release changelog superrelease
 
 on:
   workflow_dispatch:
@@ -11,7 +11,7 @@ permissions:
   contents: write
   packages: write
   pull-requests: write
-
+  
 jobs:
   fetch-tag:
     runs-on: ubuntu-latest
@@ -49,7 +49,7 @@ jobs:
         run: |
           exit 1
           echo "Tag already exists. Workflow failed."
-     
+
   update-params-env:
     runs-on: ubuntu-latest
     needs: fetch-tag
@@ -65,55 +65,45 @@ jobs:
       - name: Read params.env
         id: read_params_env
         run: |
-          echo "params_env=$(cat config/overlays/odh/params.env)" >> $GITHUB_ENV
+          echo "params_env=$(cat config/params.env)" >> $GITHUB_ENV
               
       - name: Update params.env with new release version
         run: |     
-          sed -i 's|:v[0-9.]*\b|:${{ github.event.inputs.tag_name }}|gm' config/overlays/odh/params.env
+          sed -i 's|:v[0-9.]*\b|:${{ github.event.inputs.tag_name }}|gm' config/params.env
       - name: Commit changes
         run: |
           git config --global user.email "github-actions@github.com"
           git config --global user.name "GitHub Actions"
-          git add config/overlays/odh/params.env
+          git add config/params.env
           git commit -m "Update image refs for odh release."
           git push 
+      - name: Create Tag
+        id: create_tag
+        run: |
+          git tag -a ${{ github.event.inputs.tag_name }} -m "Prepare for ODH release ${{ github.event.inputs.tag_name }}"
+          git push origin ${{ github.event.inputs.tag_name }}
 
   changelog:
-    name: Build Changelog
-    needs: update-params-env
+    name: Changelog
+    needs: [fetch-tag,update-params-env]
     runs-on: ubuntu-latest
     outputs:
-      changelog: ${{ steps.build_changelog.outputs.changelog }}
+      changelog: ${{ steps.generate_changelog.outputs.changelog }}
     env:
       old_tag: ${{ needs.fetch-tag.outputs.old_tag }} 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4   
-        with:
-          ref: ${{ github.ref }}
-      - name: Build Changelog
-        id: build_changelog
-        uses: mikepenz/release-changelog-builder-action@v4
-        with:
-          fromTag: ${{ needs.fetch-tag.outputs.old_tag }}
-          toTag:  ${{ github.event.inputs.tag_name }}
-          token: ${{ github.token }}
-          
-  release:
-    name: Release 
-    needs: [changelog, fetch-tag]
-    runs-on: ubuntu-latest
-    env:
-      changelog: ${{ needs.changelog.outputs.changelog }}
-      old_tag: ${{ needs.fetch-tag.outputs.old_tag }}
-    
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           ref: ${{ github.ref }}
-      - name: Generate Release Notes
-        run: echo ${{ env.changelog }}
+      - name: Generate Changelog
+        id: generate_changelog
+        uses: mikepenz/release-changelog-builder-action@v4
+        with:
+          fromTag: ${{ needs.fetch-tag.outputs.old_tag }}
+          toTag:  ${{ github.event.inputs.tag_name }}
+          token: ${{ github.token }}
+
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
@@ -122,6 +112,8 @@ jobs:
           prerelease: false
           draft: false
           files: bin/*
-          generate_release_notes: true
+          generate_release_notes: false
           name: ${{ github.event.inputs.tag_name }}
-          
+          body: ${{ steps.generate_changelog.outputs.changelog }}
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
