--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -74,7 +74,7 @@ jobs:
         run: |
           git config --global user.email "github-actions@github.com"
           git config --global user.name "GitHub Actions"
-          git add config/params.env
+          git add config/overlays/odh/params.env
           git commit -m "Update image refs for odh release."
           git push 
       - name: Create Tag
