--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -22,40 +22,41 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.ref }}
+          fetch-depth: 0
       
       - name: Get latest tag
         id: get_tag
         run: |
           echo "old_tag_name=$(git ls-remote --tags origin | awk -F'/' '{print $3}' | grep -v '{}' | sort -V | tail -n1)" >> $GITHUB_OUTPUT
-  
       - name: print tag
         id: print_tag
         run: | 
           echo "Old Tag=${{ steps.get_tag.outputs.old_tag_name }}"
           echo "NEW_TAG=${{ github.event.inputs.tag_name }}" >> $GITHUB_ENV
           echo "$(basename ${{ github.ref }})"
-      
-      - name: Check if new tag already exists
+
+      - name: Check if tag exists
         id: check_tag
         run: |
-          if git rev-parse ${{ env.NEW_TAG }} >/dev/null 2>&1; then
-            echo "Error: Tag '${{ env.NEW_TAG }}' already exists."
-            exit 1
-          fi
+         import sys
+         import subprocess
+         tag_name = "${{ github.event.inputs.tag_name }}"
+         command = ['git', 'tag', '-l', tag_name]
+         output = subprocess.check_output(command, stderr=subprocess.STDOUT)
+         if output.decode() != "":
+           print(f"Error: Tag '{tag_name}' already exists.", file=sys.stderr)
+           sys.exit(1)
+         else:
+           print(f"Tag '{tag_name}' does not exist.")
+        
+        shell: python
         continue-on-error: false
-        shell: bash
-      - name: Handle Failure
-        if: failure()
-        run: |
-          exit 1
-          echo "Tag already exists. Workflow failed."
-
+  
   update-params-env:
     runs-on: ubuntu-latest
     needs: fetch-tag
     outputs:
       param_env: ${{ steps.read_params_env.outputs.params_env }}
-      old_release_tag: ${{ needs.fetch-tag.outputs.old_tag }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -65,18 +66,19 @@ jobs:
       - name: Read params.env
         id: read_params_env
         run: |
-          echo "params_env=$(cat config/overlays/odh/params.env)" >> $GITHUB_ENV
+          echo "params_env=$(cat config/params.env)" >> $GITHUB_ENV
               
       - name: Update params.env with new release version
         run: |     
-          sed -i 's|:v[0-9.]*\b|:${{ github.event.inputs.tag_name }}|gm' config/overlays/odh/params.env
+          sed -i 's|:v[0-9.]*\b|:${{ github.event.inputs.tag_name }}|gm' config/params.env
       - name: Commit changes
         run: |
           git config --global user.email "github-actions@github.com"
           git config --global user.name "GitHub Actions"
-          git add config/overlays/odh/params.env
+          git add config/params.env
           git commit -m "Update image refs for odh release."
           git push 
+
       - name: Create Tag
         id: create_tag
         run: |
@@ -87,22 +89,11 @@ jobs:
     name: Changelog
     needs: [fetch-tag,update-params-env]
     runs-on: ubuntu-latest
-    outputs:
-      changelog: ${{ steps.generate_changelog.outputs.changelog }}
-    env:
-      old_tag: ${{ needs.fetch-tag.outputs.old_tag }} 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           ref: ${{ github.ref }}
-      - name: Generate Changelog
-        id: generate_changelog
-        uses: mikepenz/release-changelog-builder-action@v4
-        with:
-          fromTag: ${{ needs.fetch-tag.outputs.old_tag }}
-          toTag:  ${{ github.event.inputs.tag_name }}
-          token: ${{ github.token }}
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
@@ -112,8 +103,6 @@ jobs:
           prerelease: false
           draft: false
           files: bin/*
-          generate_release_notes: false
+          generate_release_notes: true
           name: ${{ github.event.inputs.tag_name }}
-          body: ${{ steps.generate_changelog.outputs.changelog }}
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
+       
